@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2003, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -43,11 +43,10 @@ import java.io.*;
  *     the agent disables the event generation.
  * COMMENTS
  *
- * @requires vm.continuations
  * @library /test/lib
- * @compile --enable-preview -source ${jdk.version} singlestep03.java
- * @run main/othervm/native --enable-preview -agentlib:singlestep03 singlestep03 platform
- * @run main/othervm/native --enable-preview -agentlib:singlestep03 singlestep03 virtual
+ * @compile singlestep03.java
+ * @run main/othervm/native -agentlib:singlestep03 singlestep03 platform
+ * @run main/othervm/native -agentlib:singlestep03 singlestep03 virtual
  */
 
 public class singlestep03 {
