@@ -28,8 +28,6 @@
  *          jdk.compiler/com.sun.tools.javac.parser
  *          jdk.compiler/com.sun.tools.javac.tree
  *          jdk.compiler/com.sun.tools.javac.util
- * @compile --enable-preview -source ${jdk.version} DisambiguatePatterns.java
- * @run main/othervm --enable-preview DisambiguatePatterns
  */
 
 import com.sun.source.tree.CaseLabelTree;
@@ -55,11 +53,11 @@ public class DisambiguatePatterns {
                                  ExpressionType.PATTERN);
         test.disambiguationTest("String s when s.isEmpty()",
                                  ExpressionType.PATTERN);
-        test.disambiguationTest("(String s)",
+        test.disambiguationTest("String s",
                                  ExpressionType.PATTERN);
-        test.disambiguationTest("(@Ann String s)",
+        test.disambiguationTest("@Ann String s",
                                  ExpressionType.PATTERN);
-        test.disambiguationTest("((String s))",
+        test.disambiguationTest("String s",
                                  ExpressionType.PATTERN);
         test.disambiguationTest("(String) s",
                                  ExpressionType.EXPRESSION);
@@ -79,7 +77,7 @@ public class DisambiguatePatterns {
                                  ExpressionType.EXPRESSION);
         test.disambiguationTest("(a << b || a < b | a >>> b)",
                                  ExpressionType.EXPRESSION);
-        test.disambiguationTest("(a < c.d > b)",
+        test.disambiguationTest("a < c.d > b",
                                  ExpressionType.PATTERN);
         test.disambiguationTest("a<? extends c.d> b",
                                  ExpressionType.PATTERN);
