@@ -1,8 +1,9 @@
 /*
  * @test /nodynamiccopyright/
  * @summary Verify errors related to var patterns
- * @compile/fail/ref=VarErrors.out --enable-preview -source ${jdk.version} -XDrawDiagnostics -XDshould-stop.at=FLOW -XDdev VarErrors.java
+ * @compile/fail/ref=VarErrors.out -XDrawDiagnostics -XDshould-stop.at=FLOW -XDdev VarErrors.java
  */
+
 public class VarErrors {
     void testIf(CharSequence cs) {
         if (cs instanceof var v) {}
